added address too

--- a/backend/.env
+++ b/backend/.env
@@ -6,4 +6,5 @@ EMAIL_PASS=dtgz vzdb gwch obwz
 ADMIN_MONGO_USERNAME=ecominterior
 ADMIN_MONGO_PASSWORD=ytZ3SdRQDRPIK32F
 PORT=5001
+JWT_SECRET=EcomInterior
 MONGO_URI="mongodb+srv://ecominterior:ytZ3SdRQDRPIK32F@ecominterior0.k9tlr9c.mongodb.net/?retryWrites=true&w=majority&appName=ecominterior0"
